# ai-agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt
app/: __init__.py  agent.py  config.py  main.py
app/common/: __init__.py
app/common/enums/: __init__.py  agent.py  common.py  sse.py
app/common/utils/: __init__.py  helpers.py
app/modules/: __init__.py
app/modules/chat/: __init__.py  events.py  routes.py  schemas.py  sse.py  utils.py
app/modules/health/: __init__.py  routes.py
docs/: agent-flow-and-state.md
src/: agent.ts  app.ts  index.ts  schemas.ts
src/common/enums/: agent.ts  sse.ts
src/middleware/: cors.ts  error-handler.ts  index.ts
src/modules/agent/: enums.ts  graph.ts  index.ts  nodes.ts  state.ts  types.ts
src/modules/chat/: enums.ts  events.ts  index.ts  routes.ts  schemas.ts  sse.ts  utils.ts
src/routes/: chat.ts  health.ts  index.ts
